# UpSearch

./: .dockerignore  .env.example  .gitignore  BROKEN.md  CLAUDE.md  Dockerfile  README.md  check_approvals.py  db.py  docker-compose.yml  main.py  opportunity_os.db  orchestrator.py  os_main.py  profile.txt  pyproject.toml  requirements.txt  run_scheduler.py  server.py
agent/: README.md  handoff-template.md  system.yaml  task-queue.yaml  verification.md
agents/: action.py  company.py  outreach.py  people.py  problem.py  profile.py  qa.py  technical_note.py
docs/: deployment.md  release-checklist.md
frontend/: design_driver.mjs  driver2.mjs  driver3.mjs  index.html  package.json  tailwind.config.js
human/: README.md  magic-trick.md
scripts/: backup-state.sh  claude-session-tail.py  deepseek-next.sh  deepseek-resume.sh  deepseek-session.sh  deepseek-task.sh  restore-state.sh  run-golden-acceptance.sh  run-release-acceptance.sh
tests/: test_action_safety.py  test_api_contract.py  test_auto_discovery.py  test_company_agent.py  test_company_identity.py  test_company_identity_fallback.py  test_company_people_source.py  test_db_concurrency.py  test_db_path.py  test_delivery_followup.py  test_discovery_precision.py  test_discovery_sources.py  test_golden_packets.py  test_legacy_archive.py  test_model_execution_retry.py  test_model_provider_config.py  test_orchestrator_service.py  test_os_tracking.py  test_outreach_drafts.py  test_outreach_gating.py  test_packet_checkup_people.py  test_packet_checkup_trace.py  test_people_hygiene.py  test_people_sourcing_depth.py  (+18 more)
(+154 files in other folders)
