[project]
name = "upsearch"
version = "0.1.0"
description = "Multi-agent opportunity intelligence and outreach orchestration."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
tracking = ["wandb>=0.17"]
test = ["pytest>=8"]

[project.scripts]
upsearch = "upsearch.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["upsearch*"]
